--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<br>
 	<br>
 
-	<image class="image-three" src="C:/Users/Gebruiker/Desktop/Schooljaar 1 Applicatie Ontwikkelaar/						test1/LAB3-Krantenartikel/images/vloot3.jpg">
+	<image class="image-three" src="C:/Users/Gebruiker/Desktop/Schooljaar 1 Applicatie Ontwikkelaar/test1/LAB3-Krantenartikel/images/vloot3.jpg">
 	<h5>Waar kan ik het vinden?</h5>
 	<P> 
 		Er zijn vele variaties van passages van Lorem Ipsum beschikbaar maar het merendeel heeft te lijden gehad van wijzigingen in een of andere vorm, door ingevoegde humor of willekeurig gekozen woorden die nog niet half geloofwaardig ogen. Als u een passage uit Lorum Ipsum gaat gebruiken dient u zich ervan te verzekeren dat er niets beschamends midden in de tekst verborgen zit. Alle Lorum Ipsum generators op Internet hebben de eigenschap voorgedefinieerde stukken te herhalen waar nodig zodat dit de eerste echte generator is op internet. Het gebruikt een woordenlijst van 200 latijnse woorden gecombineerd met een handvol zinsstructuur modellen om een Lorum Ipsum te genereren die redelijk overkomt. De gegenereerde Lorum Ipsum is daardoor altijd vrij van herhaling, ingevoegde humor of ongebruikelijke woorden etc.
